scripts/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payfee-app-svc
  namespace: payfee-app
spec:
  selector:
    app: payfee-app
  ports:
    - port: 80
  type: ClusterIP
