scripts/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payfee-app-ing
  namespace: payfee-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: wild-payfee-app-tls-cert
      hosts:
        - "web.payfee.app"

  rules:
    - host: "web.payfee.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payfee-app-svc
                port:
                  number: 80
